# generate_deformation_fields

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
scripts/: Makefile.am  blur_determinant.py  calculate_determinant.pyx  create_deformation.py  create_determinant.py  cython_code.c  cython_code.pyx  setup.c  setup.py
src/: Makefile.am  Makevars  create_determinant_file.cpp  create_initial_deformation_grid.cpp  update_deformation_grid.cpp
test_files/: target_determinant_test_file.mnc  target_determinant_test_file_deformation_grid_det_p1.mnc  target_tolerance_space_test_file.mnc
